--- a/awx-automation/mongodb.yml
+++ b/awx-automation/mongodb.yml
@@ -15,6 +15,18 @@
         aws_iam_role: "{{ aws_iam_role }}"
         cluster_name: "{{ app_cluster_name }}"
 
+    - set_fact:
+        user_token: "{{ lookup('password', '/dev/null chars=ascii_uppercase,ascii_lowercase,digits length=40') }}"
+      when: deploy_action == "mongodb-deploy"
+
+    - set_fact:
+        root_token: "{{ lookup('password', '/dev/null chars=ascii_uppercase,ascii_lowercase,digits length=40') }}"
+      when: deploy_action == "mongodb-deploy"
+
+    - set_fact:
+        user: "{{ lookup('password', '/dev/null chars=ascii_uppercase,ascii_lowercase,digits length=16') }}"
+      when: deploy_action == "mongodb-deploy"
+
     - include_role:
         name: "mongodb"
       vars:
