--- a/awx-automation/roles/baf/network/tasks/main.yaml
+++ b/awx-automation/roles/baf/network/tasks/main.yaml
@@ -1,3 +1,7 @@
+---
+- name: "Include pre-tasks"
+  include_tasks: "pre-tasks.yaml"
+
 - name: Delete k8s namespace
   community.kubernetes.k8s:
     name: openidl-baf
