--- a/awx-automation/roles/baf/network/tasks/pre-tasks.yaml
+++ b/awx-automation/roles/baf/network/tasks/pre-tasks.yaml
@@ -18,3 +18,7 @@
      aws secretsmanager get-secret-value --secret-id {{ env }}-{{ add_org_name }}-msp --version-stage AWSCURRENT | jq -r .SecretString
   register: orgjson
   when: deploy_action == "add_new_org"
+
+- name: Update kubeconfig and set context to openidl EKS cluster
+  shell: |
+    export AWS_PROFILE=cicd-role; aws eks update-kubeconfig --region {{ aws_region }} --name {{ cluster_name }}
