--- a/awx-automation/roles/baf/pre-register-users/tasks/pre-tasks.yaml
+++ b/awx-automation/roles/baf/pre-register-users/tasks/pre-tasks.yaml
@@ -19,3 +19,7 @@
 
 - set_fact:
     ca_user_password: "{{ lookup('password', '/dev/null chars=ascii_uppercase,ascii_lowercase,digits length=40') }}"
+
+- name: Update kubeconfig and set context to openidl EKS cluster
+  shell: |
+    export AWS_PROFILE=cicd-role; aws eks update-kubeconfig --region {{ aws_region }} --name {{ cluster_name }}
