--- a/awx-automation/vault.yml
+++ b/awx-automation/vault.yml
@@ -15,6 +15,29 @@
         aws_iam_role: "{{ aws_iam_role }}"
         cluster_name: "{{ blk_cluster_name }}"
 
+    - name: Get KMS ID
+      shell: |
+        export AWS_PROFILE=cicd-role
+        aws kms describe-key --key-id alias/{{ network.org_name[:4] }}-{{ env }}-vault-kmskey | jq -r .KeyMetadata.KeyId
+      register: output
+      when: deploy_action == "vault-deploy"
+
+    - set_fact:
+        config_user: "{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=8') }}"
+      when: deploy_action == "vault-deploy"
+
+    - set_fact:
+        config_user_token: "{{ lookup('password', '/dev/null chars=ascii_uppercase,ascii_lowercase,digits length=40') }}"
+      when: deploy_action == "vault-deploy"
+
+    - set_fact:
+        kvs_user: "{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=8') }}"
+      when: deploy_action == "vault-deploy"
+
+    - set_fact:
+        kvs_user_token: "{{ lookup('password', '/dev/null chars=ascii_uppercase,ascii_lowercase,digits length=40') }}"
+      when: deploy_action == "vault-deploy"
+
     - include_role:
         name: "vault"
       vars:
