--- a/awx-automation/anal-config-dev.yml
+++ b/awx-automation/anal-config-dev.yml
@@ -1,22 +1,7 @@
-access_id: ""
-access_key: ""
-region: ""
-cluster_name: ""
-account: ""
-gitops_repo_url: "github.com/rajeshsanjeevi/openidl-iaac.git"
-gitops_repo_branch: "hig-carrier"
-gitops_repo_user: ""
-gitops_repo_user_token: ""
-gitops_repo_user_email: ""
 ordererorg_domain: "aais.thetech.digital"
 domain: "analytics.thetech.digital"
 internal_domain: "analytics.internal.thetech.digital"
-env: "dev"
-add_org: "" 
-registry: ""
-chaincode_version: ""
 node_type: "analytics"
-
 network:
   org_name: "analytics"
   ordererorg: "false"
@@ -28,7 +13,7 @@ network:
   channels:
   - name: analytics-aais
     chaincode:
-      name: openidl-cc-aais-carriers
+      name: openidl-cc-aais-anal
       repo_url: github.com/rajeshsanjeevi/openidl-main.git
       repo_branch: hig-carrier
       repo_path: openidl-chaincode/chaincode/openidl
@@ -37,7 +22,7 @@ network:
         policy: "OR('analyticsMSP.member', 'aaisMSP.member')"
   - name: analytics-carrier
     chaincode:
-      name: openidl-cc-aais-carriers
+      name: openidl-cc-aais-carr
       repo_url: github.com/rajeshsanjeevi/openidl-main.git
       repo_branch: hig-carrier
       repo_path: openidl-chaincode/chaincode/openidl
