--- a/awx-automation/carr-config-dev.yml
+++ b/awx-automation/carr-config-dev.yml
@@ -1,34 +1,23 @@
-access_id: ""
-access_key: ""
-region: ""
-cluster_name: ""
-account: ""
-gitops_repo_url: github.com/rajeshsanjeevi/openidl-iaac.git"
-gitops_repo_branch: "hig-carrier"
-gitops_repo_user: ""
-gitops_repo_user_token: ""
-gitops_repo_user_email: ""
 ordererorg_domain: "aais.techiething.com"
 domain: "carrier.techiething.com"
 internal_domain: "carrier.internal.techiething.com"
-env: "dev"
 add_org: "" 
-registry: ""
-chaincode_version: ""
 node_type: "carrier"
-
 network:
   org_name: "carrier"
   ordererorg: "false"
   ordererorg_name: "ordererorg"
   organizations:
-    - name: ""
+    - name: "analytics"
+      domain: ""
+      org_status: ""
+    - name: "carrier"
       domain: ""
       org_status: ""
   channels:
   - name: analytics-carrier
     chaincode:
-      name: openidl-cc-aais-carriers
+      name: openidl-cc-aais-carr
       repo_url: github.com/rajeshsanjeevi/openidl-main.git
       repo_branch: hig-carrier
       repo_path: openidl-chaincode/chaincode/openidl
