--- a/awx-automation/aais-config-dev.yml
+++ b/awx-automation/aais-config-dev.yml
@@ -6,7 +6,7 @@ chaincode_version: ""
 node_type: "aais"
 network:
     org_name: "aais"
-    ordererorg: "false"
+    ordererorg: "true"
     ordererorg_name: "ordererorg"
     organizations:
         - name: "analytics"
