--- a/awx-automation/roles/baf/pre-register-users/tasks/main.yaml
+++ b/awx-automation/roles/baf/pre-register-users/tasks/main.yaml
@@ -131,11 +131,11 @@
   debug:
     msg: '{{ pod_logs.stdout_lines }}'
 
-#- name: delete ca user token to aws secrets manager
-#  shell: |
-#    export AWS_PROFILE=cicd-role
-#    aws secretsmanager delete-secret --secret-id {{ network.org_name }}-{{ env }}-ca-app-user-token --force-delete-without-recovery
-#  ignore_errors: yes
+- name: delete ca user token to aws secrets manager
+  shell: |
+    export AWS_PROFILE=cicd-role
+    aws secretsmanager delete-secret --secret-id {{ network.org_name }}-{{ env }}-ca-app-user-token --force-delete-without-recovery
+  ignore_errors: yes
 
 - name: upload ca user token to aws secrets manager
   shell: |
