--- a/blockchain-automation-framework/platforms/shared/configuration/environment-setup.yaml
+++ b/blockchain-automation-framework/platforms/shared/configuration/environment-setup.yaml
@@ -6,7 +6,7 @@
 #######################################
   - hosts: ansible_provisioners
     gather_facts: yes
-    no_log: "{{ no_ansible_log | default(false) }}"
+    no_log: "{{ no_ansible_log | default(true) }}"
     tasks:
     - include_role:
         name:  setup/kubectl
