--- a/awx-automation/pre-register-users.yml
+++ b/awx-automation/pre-register-users.yml
@@ -13,7 +13,10 @@
         aws_region: "{{ aws_region }}"
         aws_external_id: "{{ aws_external_id }}"
         aws_iam_role: "{{ aws_iam_role }}"
-        cluster_name: "{{ blk_cluster_name }}"
+
+    - name: Update kubeconfig and set context to openidl EKS cluster
+      shell: |
+        export AWS_PROFILE=cicd-role; aws eks update-kubeconfig --region {{ aws_region }} --name {{ blk_cluster_name }}
 
     - name: Get vault root token
       shell: |
@@ -43,5 +46,5 @@
         vault_kvs_user: "{{ vault_user.stdout }}"
         vault_kvs_user_token: "{{ vault_user_token.stdout }}"
         ca_user_token: "{{ ca_user_password }}"
-        cluster_name: "{{ blk_cluster_name }}"
+
 
