--- a/awx-automation/roles/baf/network/tasks/main.yaml
+++ b/awx-automation/roles/baf/network/tasks/main.yaml
@@ -13,7 +13,7 @@
 
 - name: Printing config file data
   debug:
-    msg: "{{ network.channels }}, {{ network.channels[0].name, {{ network.channels[1].name }} }}
+    msg: "{{ network.channels }}, {{ network.channels[0].name}}, {{ network.channels[1].name }}"
 
 - name: Generate network config file
   template:
