--- a/awx-automation/anal-config-dev.yml
+++ b/awx-automation/anal-config-dev.yml
@@ -9,7 +9,7 @@ network:
   organizations:
     - name: "carrier"
       domain: "carrier.thtetech.digital"
-      org_status: ""
+      org_status: "false"
   channels:
   - name: aais
     chaincode:
