--- a/awx-automation/anal-config-dev.yml
+++ b/awx-automation/anal-config-dev.yml
@@ -11,18 +11,18 @@ network:
       domain: ""
       org_status: ""
   channels:
-  - name: aais
+  - name: "aais"
     chaincode:
-      name: openidl-cc-aais-anal
-      repo_url: github.com/rajeshsanjeevi/openidl-main.git
-      repo_branch: hig-carrier
-      repo_path: openidl-chaincode/chaincode/openidl
+      name: "openidl-cc-aais-anal"
+      repo_url: "github.com/rajeshsanjeevi/openidl-main.git"
+      repo_branch: "hig-carrier"
+      repo_path: "openidl-chaincode/chaincode/openidl"
       collectionconfig:
         name: "analytics_aais_pdc"
         policy: "OR('analyticsMSP.member', 'aaisMSP.member')"
-  - name: defaultchannel
+  - name: "defaultchannel"
     chaincode:
-      name: openidl-cc-default
-      repo_url: github.com/rajeshsanjeevi/openidl-main.git
-      repo_branch: hig-carrier
-      repo_path: openidl-chaincode/chaincode/openidl
+      name: "openidl-cc-default"
+      repo_url: "github.com/rajeshsanjeevi/openidl-main.git"
+      repo_branch: "hig-carrier"
+      repo_path: "openidl-chaincode/chaincode/openidl"
