--- a/awx-automation/aais-config-dev.yml
+++ b/awx-automation/aais-config-dev.yml
@@ -14,6 +14,15 @@ network:
     - name: "carrier"
       domain: "carrier.thetech.digital"
   channels:
+  - name: aais-anal
+    chaincode:
+      name: openidl-cc-aais-anal
+      repo_url: github.com/rajeshsanjeevi/openidl-main.git
+      repo_branch: hig-carrier
+      repo_path: openidl-chaincode/chaincode/openidl
+      collectionconfig:
+        - name: "anal_aais_pdc"
+          policy: "OR('analMSP.member', 'aaisMSP.member')"
   - name: aais
     chaincode:
       name: openidl-cc-aais-anal
