--- a/awx-automation/roles/baf/network/tasks/main.yaml
+++ b/awx-automation/roles/baf/network/tasks/main.yaml
@@ -16,7 +16,7 @@
 
 - name: Generate network config file (join peer)
   template:
-    src: "./network-setup.yml"
+    src: templates/network-setup.yml.j2
     #src: templates/network-setup-develop.yml.j2
     dest: "./network-setup.yml"
     mode: 0755
