--- a/awx-automation/roles/baf/network/tasks/main.yaml
+++ b/awx-automation/roles/baf/network/tasks/main.yaml
@@ -12,15 +12,14 @@
     src: templates/network-setup.yml.j2
     dest: "./network-setup.yml"
     mode: 0755
-#  when: action != "join_peer"
+  when: channel_name == "defaultchannel"
 
-#- name: Generate network config file (join peer)
-#  template:
-#    src: templates/network-setup.yml.j2
-#    #src: templates/network-setup-develop.yml.j2
-#    dest: "./network-setup.yml"
-#    mode: 0755
-#  when: action == "join_peer"
+- name: Generate network config file (non default channel)
+  template:
+    src: templates/network-setup-develop.yml.j2
+    dest: "./network-setup.yml"
+    mode: 0755
+  when: channel_name != "default_channel"
 
 - name: Create a k8s namespace
   community.kubernetes.k8s:
