--- a/awx-automation/pre-register-users.yml
+++ b/awx-automation/pre-register-users.yml
@@ -1,6 +1,6 @@
 - hosts: ansible_provisioners
   gather_facts: yes
-  no_log: "{{ no_ansible_log | default(true) }}"
+  no_log: "{{ no_ansible_log | default(false) }}"
   vars_files:
     - "./{{ org_name }}-config-{{ env }}.yml"
 
@@ -46,5 +46,6 @@
         vault_kvs_user: "{{ vault_user.stdout }}"
         vault_kvs_user_token: "{{ vault_user_token.stdout }}"
         ca_user_token: "{{ ca_user_password }}"
+        aws_region: "{{ aws_region }}"
 
 
