--- a/awx-automation/roles/baf/pre-register-users/tasks/main.yaml
+++ b/awx-automation/roles/baf/pre-register-users/tasks/main.yaml
@@ -129,11 +129,11 @@
     msg: '{{ pod_logs.stdout_lines }}'
 
 # comment out this task before pushing to core repository
-- name: delete ca user token to aws secrets manager
-  shell: |
-    export AWS_PROFILE=cicd-role
-    aws secretsmanager delete-secret --secret-id {{ network.org_name }}-{{ env }}-ca-app-user-token --region {{ aws_region }} --force-delete-without-recovery
-  ignore_errors: yes
+#- name: delete ca user token to aws secrets manager
+#  shell: |
+#    export AWS_PROFILE=cicd-role
+#    aws secretsmanager delete-secret --secret-id {{ network.org_name }}-{{ env }}-ca-app-user-token --region {{ aws_region }} --force-delete-without-recovery
+#  ignore_errors: yes
 
 - name: upload ca user token to aws secrets manager
   shell: |
