--- a/awx-automation/roles/baf/network/tasks/main.yaml
+++ b/awx-automation/roles/baf/network/tasks/main.yaml
@@ -20,7 +20,7 @@
     src: templates/network-setup-baf-automation.yml.j2
     dest: "./network-setup.yml"
     mode: 0755
-  when: (channel_name != "default_channel") and (action != "join_peer")
+  when: channel_name != "default_channel"
 
 - name: Generate network config file (non defaultchannel/join_peer action)
   template:
