--- a/awx-automation/roles/baf/network/tasks/main.yaml
+++ b/awx-automation/roles/baf/network/tasks/main.yaml
@@ -19,14 +19,14 @@
     src: templates/network-setup-develop.yml.j2
     dest: "./network-setup.yml"
     mode: 0755
-  when: (channel_name != "default_channel") and (action != "join_peer")
+  when: (channel_name != "default_channel") and ((action != "join_peer") or (action != "chaincode"))
 
 - name: Generate network config file (non defaultchannel/join_peer action)
   template:
     src: templates/network-setup-baf-automation.yml.j2
     dest: "./network-setup.yml"
     mode: 0755
-  when: (channel_name != "default_channel") and (action == "join_peer")
+  when: (channel_name != "default_channel") and ((action == "join_peer") or (action == "chaincode"))
 # add_new_channel - works with network-develop file
 
 - name: Create a k8s namespace
