--- a/awx-automation/roles/baf/network/tasks/main.yaml
+++ b/awx-automation/roles/baf/network/tasks/main.yaml
@@ -26,7 +26,7 @@
     src: templates/network-setup-develop.yml.j2
     dest: "./network-setup.yml"
     mode: 0755
-  when: ((channel_name != "default_channel") and ((action != "join_peer") or (action != "chaincode")))
+  when: ((channel_name != "default_channel") and ((action != "join_peer") and (action != "chaincode")))
 
 
 # add_new_channel - works with network-develop file
