--- a/awx-automation/pre-register-users.yml
+++ b/awx-automation/pre-register-users.yml
@@ -21,19 +21,19 @@
     - name: Get vault root token
       shell: |
         export AWS_PROFILE=cicd-role
-        aws secretsmanager get-secret-value --secret-id {{ network.org_name }}-{{ env }}-vault-unseal-key --version-stage AWSCURRENT | jq -r .SecretString
+        aws secretsmanager get-secret-value --secret-id {{ network.org_name }}-{{ env }}-vault-unseal-key --version-stage AWSCURRENT --region {{ aws_region }} | jq -r .SecretString
       register: vault
 
     - name: Get kvs user credentials from secrets manager
       shell: |
         export AWS_PROFILE=cicd-role
-        aws secretsmanager get-secret-value --secret-id {{ network.org_name }}-{{ env }}-kvs-vault  --version-stage AWSCURRENT | jq -r '.SecretString|fromjson'.username
+        aws secretsmanager get-secret-value --secret-id {{ network.org_name }}-{{ env }}-kvs-vault  --version-stage AWSCURRENT --region {{ aws_region }} | jq -r '.SecretString|fromjson'.username
       register: vault_user
 
     - name: Get kvs user credentials from secrets manager
       shell: |
         export AWS_PROFILE=cicd-role
-        aws secretsmanager get-secret-value --secret-id {{ network.org_name }}-{{ env }}-kvs-vault  --version-stage AWSCURRENT | jq -r '.SecretString|fromjson'.password
+        aws secretsmanager get-secret-value --secret-id {{ network.org_name }}-{{ env }}-kvs-vault  --version-stage AWSCURRENT --region {{ aws_region }}| jq -r '.SecretString|fromjson'.password
       register: vault_user_token
 
     - set_fact:
