--- a/awx-automation/carr-config-dev.yml
+++ b/awx-automation/carr-config-dev.yml
@@ -1,6 +1,6 @@
-ordererorg_domain: "aais.techiething.com"
-domain: "carrier.techiething.com"
-internal_domain: "carrier.internal.techiething.com"
+ordererorg_domain: "aais.thetech.digital"
+domain: "carrier.thetech.digital"
+internal_domain: "carrier.internal.thetech.digital"
 add_org: "" 
 node_type: "carrier"
 network:
@@ -9,15 +9,15 @@ network:
   ordererorg_name: "ordererorg"
   organizations:
     - name: "analytics"
-      domain: ""
+      domain: "analytics.thetech.digital"
       org_status: ""
     - name: "carrier"
-      domain: ""
+      domain: "carrier.thetech.digital"
       org_status: ""
   channels:
-  - name: analytics-carrier
+  - name: anal-carr
     chaincode:
-      name: openidl-cc-aais-carr
+      name: openidl-cc-anal-carr
       repo_url: github.com/rajeshsanjeevi/openidl-main.git
       repo_branch: hig-carrier
       repo_path: openidl-chaincode/chaincode/openidl
