--- a/awx-automation/carr-config-dev.yml
+++ b/awx-automation/carr-config-dev.yml
@@ -4,7 +4,7 @@ internal_domain: "carrier.internal.thetech.digital"
 add_org: "" 
 node_type: "carrier"
 network:
-  org_name: "carrier"
+  org_name: "carr"
   ordererorg: "false"
   ordererorg_name: "ordererorg"
   organizations:
