--- a/awx-automation/aais-config-dev.yml
+++ b/awx-automation/aais-config-dev.yml
@@ -9,20 +9,11 @@ network:
   ordererorg: "true"
   ordererorg_name: "ordererorg"
   organizations:
-    - name: "analytics"
-      domain: "analytics.thetech.digital"
-    - name: "carrier"
-      domain: "carrier.thetech.digital"
+    - name: ""
+      domain: ""
+    - name: ""
+      domain: ""
   channels:
-  - name: aais-anal
-    chaincode:
-      name: openidl-cc-aais-anal
-      repo_url: github.com/rajeshsanjeevi/openidl-main.git
-      repo_branch: hig-carrier
-      repo_path: openidl-chaincode/chaincode/openidl
-      collectionconfig:
-        - name: "anal_aais_pdc"
-          policy: "OR('analyticsMSP.member', 'aaisMSP.member')"
   - name: defaultchannel
     chaincode:
       name: openidl-cc-default
