--- a/awx-automation/carr-config-dev.yml
+++ b/awx-automation/carr-config-dev.yml
@@ -17,7 +17,7 @@ network:
   channels:
   - name: aais-anal
     chaincode:
-      name: openidl-cc-anal-carr
+      name: openidl-cc-aais-anal
       repo_url: github.com/rajeshsanjeevi/openidl-main.git
       repo_branch: hig-carrier
       repo_path: openidl-chaincode/chaincode/openidl
