--- a/awx-automation/anal-config-dev.yml
+++ b/awx-automation/anal-config-dev.yml
@@ -17,3 +17,12 @@ network:
       repo_url: "github.com/rajeshsanjeevi/openidl-main.git"
       repo_branch: "hig-carrier"
       repo_path: "openidl-chaincode/chaincode/openidl"
+  - name: anal-aais
+    chaincode:
+      name: openidl-cc-aais-carriers
+      repo_url: github.com/rajeshsanjeevi/openidl-main.git
+      repo_branch: hig-carrier
+      repo_path: openidl-chaincode/chaincode/openidl
+      collectionconfig:
+        - name: "anal_aais_pdc"
+          policy: "OR('analyticsMSP.member', 'aaisMSP.member')"
