--- a/awx-automation/roles/baf/network/tasks/main.yaml
+++ b/awx-automation/roles/baf/network/tasks/main.yaml
@@ -28,7 +28,7 @@
     mode: 0755
   when: ((channel_name != "defaultchannel") and ((action != "join_peer") and (action == "chaincode")))
 
-
+# chaincode for non default channel works for network-develop file
 # add_new_channel - works with network-develop file
 
 - name: Create a k8s namespace
