--- a/awx-automation/roles/baf/network/tasks/main.yaml
+++ b/awx-automation/roles/baf/network/tasks/main.yaml
@@ -19,7 +19,7 @@
     src: templates/network-setup-baf-automation.yml.j2
     dest: "./network-setup.yml"
     mode: 0755
-  when: ((channel_name != "defaultchannel") and ((action != "join_peer") or (action != "chaincode")))
+  when: ((channel_name != "defaultchannel") and ((action != "join_peer") and (action != "chaincode")))
 
 - name: Generate network config file (non defaultchannel/non join_peer action)
   template:
