--- a/awx-automation/aais-config-dev.yml
+++ b/awx-automation/aais-config-dev.yml
@@ -29,5 +29,15 @@ network:
       collectionconfig:
         - name: "anal_aais_pdc"
           policy: "OR('analyticsMSP.member', 'aaisMSP.member')"
+  - name: anal-carr
+    chaincode:
+      name: openidl-cc-aais-carriers
+      repo_url: github.com/rajeshsanjeevi/openidl-main.git
+      repo_branch: hig-carrier
+      repo_path: openidl-chaincode/chaincode/openidl
+      collectionconfig:
+        - name: "anal_carr_pdc"
+          policy: "OR('analyticsMSP.member', 'carrierMSP.member')"
+
 
 
