--- a/awx-automation/roles/baf/network/tasks/main.yaml
+++ b/awx-automation/roles/baf/network/tasks/main.yaml
@@ -19,14 +19,14 @@
     src: templates/network-setup-baf-automation.yml.j2
     dest: "./network-setup.yml"
     mode: 0755
-  when: ((channel_name != "defaultchannel") and ((action != "add_new_channel") and (action != "join_peer") and (action != "chaincode")))
+  when: ((channel_name != "defaultchannel") and ((action != "add_new_org") and (action != "add_new_channel") and (action != "join_peer") and (action != "chaincode")))
 
 - name: Generate network config file (non defaultchannel/non join_peer action)
   template:
     src: templates/network-setup-develop.yml.j2
     dest: "./network-setup.yml"
     mode: 0755
-  when: ((channel_name != "defaultchannel") and ((action == "add_new_channel") or (action == "join_peer") or (action == "chaincode")))
+  when: ((channel_name != "defaultchannel") and ((action =="add_new_org") or (action == "add_new_channel") or (action == "join_peer") or (action == "chaincode")))
 
 # chaincode for non default channel works for network-develop file
 # add_new_channel - works with network-develop file
