--- a/awx-automation/carr-config-dev.yml
+++ b/awx-automation/carr-config-dev.yml
@@ -18,3 +18,12 @@ network:
       repo_url: github.com/rajeshsanjeevi/openidl-main.git
       repo_branch: hig-carrier
       repo_path: openidl-chaincode/chaincode/openidl
+  - name: anal-carr
+    chaincode:
+      name: openidl-cc-aais-carriers
+      repo_url: github.com/rajeshsanjeevi/openidl-main.git
+      repo_branch: hig-carrier
+      repo_path: openidl-chaincode/chaincode/openidl
+      collectionconfig:
+        - name: "anal_carr_pdc"
+          policy: "OR('analyticsMSP.member', 'carrierMSP.member')"
