--- a/awx-automation/fabric-network.yml
+++ b/awx-automation/fabric-network.yml
@@ -1,7 +1,6 @@
 - hosts: ansible_provisioners
   gather_facts: yes
-  #no_log: "{{ no_ansible_log | default(false) }}"
-  no_log: false
+  no_log: "{{ no_ansible_log | default(false) }}"
   vars_files:
     - "./{{ org_name }}-config-{{ env }}.yml"
 
