--- a/awx-automation/fabric-network.yml
+++ b/awx-automation/fabric-network.yml
@@ -5,38 +5,38 @@
     - "./config/{{ org_name }}-config-{{ env }}.yml"
 
   tasks:
-    - include_role:
-        name: "prerun-job"
-      vars:
-        aws_access_key: "{{ aws_access_key }}"
-        aws_secret_key: "{{ aws_secret_key }}"
-        aws_region: "{{ aws_region }}"
-        aws_external_id: "{{ aws_external_id }}"
-        aws_iam_role: "{{ aws_iam_role }}"
+    #- include_role:
+    #    name: "prerun-job"
+    #  vars:
+    #    aws_access_key: "{{ aws_access_key }}"
+    #    aws_secret_key: "{{ aws_secret_key }}"
+    #    aws_region: "{{ aws_region }}"
+    #    aws_external_id: "{{ aws_external_id }}"
+    #    aws_iam_role: "{{ aws_iam_role }}"
 
-    - name: Update kubeconfig and set context to openidl EKS cluster
-      shell: |
-        export AWS_PROFILE=cicd-role; aws eks update-kubeconfig --region {{ aws_region }} --name {{ blk_cluster_name }}
+    #- name: Update kubeconfig and set context to openidl EKS cluster
+    # shell: |
+    #    export AWS_PROFILE=cicd-role; aws eks update-kubeconfig --region {{ aws_region }} --name {{ blk_cluster_name }}
 
-    - name: Get vault root token
-      shell: |
-        export AWS_PROFILE=cicd-role
-        aws secretsmanager get-secret-value --secret-id {{ network.org_name }}-{{ env }}-vault-unseal-key --version-stage AWSCURRENT --region {{ aws_region }} | jq -r .SecretString
-      register: vault
+    #- name: Get vault root token
+    #  shell: |
+    #    export AWS_PROFILE=cicd-role
+    #    aws secretsmanager get-secret-value --secret-id {{ network.org_name }}-{{ env }}-vault-unseal-key --version-stage AWSCURRENT --region {{ aws_region }} | jq -r .SecretString
+    #  register: vault
 
-    - name: Export Orderer TLS Cert
-      shell: |
-        export AWS_PROFILE=cicd-role
-        aws secretsmanager get-secret-value --secret-id {{ env }}-orderer-tls --version-stage AWSCURRENT --region {{ aws_region }} | jq -r .SecretString
-      register: orgjson
-      when: deploy_action == "new_org"
+    #- name: Export Orderer TLS Cert
+    #  shell: |
+    #    export AWS_PROFILE=cicd-role
+    #    aws secretsmanager get-secret-value --secret-id {{ env }}-orderer-tls --version-stage AWSCURRENT --region {{ aws_region }} | jq -r .SecretString
+    #  register: orgjson
+    #  when: deploy_action == "new_org"
 
-    - name: Export ORG_MSP
-      shell: |
-        export AWS_PROFILE=cicd-role
-        aws secretsmanager get-secret-value --secret-id {{ env }}-{{ add_org_name }}-msp --version-stage AWSCURRENT --region {{ aws_region }} | jq -r .SecretString
-      register: orgjson
-      when: deploy_action == "add_new_org"
+    #- name: Export ORG_MSP
+    #  shell: |
+    #    export AWS_PROFILE=cicd-role
+    #    aws secretsmanager get-secret-value --secret-id {{ env }}-{{ add_org_name }}-msp --version-stage AWSCURRENT --region {{ aws_region }} | jq -r .SecretString
+    #  register: orgjson
+    #  when: deploy_action == "add_new_org"
 
     - include_role:
         name: "baf/network"
