--- a/awx-automation/config-references/examples/anal-config-dev.yml
+++ b/awx-automation/config-references/examples/anal-config-dev.yml
@@ -7,8 +7,8 @@ network:
   ordererorg: "false"
   ordererorg_name: "ordererorg"
   organizations:
-    - name: ""
-      domain: ""
+    - name: "carrier"
+      domain: "carrier.thetech.digital"
   channels:
   - name: "defaultchannel"
     chaincode:
