--- a/awx-automation/roles/baf/network/tasks/main.yaml
+++ b/awx-automation/roles/baf/network/tasks/main.yaml
@@ -21,31 +21,13 @@
 #    mode: 0755
 #  when: ((channel_name != "defaultchannel") and ((action != "add_new_org") and (action != "add_new_channel") and (action != "join_peer") and (action != "chaincode")))
 
-- name: Generate network config file (non defaultchannel)
+- name: Generate network config file 
   template:
     src: templates/network-setup-develop.yml.j2
     dest: "./network-setup.yml"
     mode: 0755
  
-# chaincode for non default channel works for network-develop file
-# add_new_channel - works with network-develop file
-- name: Launch baf container
-  community.kubernetes.k8s:
-    state: present
-    wait: yes
-    wait_condition:
-      type: "Ready"
-    definition:
-      apiVersion: v1
-      kind: Pod
-      metadata:
-        name: openidl-baf
-        namespace: openidl-baf
-      spec:
-        containers:
-        - name: baf
-          image: "{{ registry }}/openidl-baf1"
-          
+         
 - name: Create a k8s namespace
   community.kubernetes.k8s:
     name: openidl-baf
