--- a/awx-automation/config/carr-config-dev.yml
+++ b/awx-automation/config/carr-config-dev.yml
@@ -7,7 +7,7 @@ network:
   ordererorg: "false"
   ordererorg_name: "ordererorg"
   organizations:
-    - name: "carr"
+    - name: "carrier"
       domain: "carrier.thetech.digital"
     - name: "analytics"
       domain: "analytics.thetech.digital"
