--- a/awx-automation/roles/baf/network/tasks/main.yaml
+++ b/awx-automation/roles/baf/network/tasks/main.yaml
@@ -1,11 +1,11 @@
 ---
-#- name: Delete k8s namespace
-#  community.kubernetes.k8s:
-#    name: openidl-baf
-#    api_version: v1
-#    kind: Namespace
-#    state: absent
-#    wait: yes
+- name: Delete k8s namespace
+  community.kubernetes.k8s:
+    name: openidl-baf
+    api_version: v1
+    kind: Namespace
+    state: absent
+    wait: yes
 
 #- name: Generate network config file (defaultchannel)
 #  template:
@@ -21,12 +21,15 @@
 #    mode: 0755
 #  when: ((channel_name != "defaultchannel") and ((action != "add_new_org") and (action != "add_new_channel") and (action != "join_peer") and (action != "chaincode")))
 
+- name: Debug orgjson
+  debug:
+    msg: "{{ orgjson }}"
+    
 - name: Generate network config file 
   template:
     src: templates/network-setup-develop.yml.j2
     dest: "./network-setup.yml"
     mode: 0755
- 
          
 - name: Create a k8s namespace
   community.kubernetes.k8s:
