--- a/awx-automation/fabric-network.yml
+++ b/awx-automation/fabric-network.yml
@@ -24,13 +24,17 @@
         aws secretsmanager get-secret-value --secret-id {{ network.org_name }}-{{ env }}-vault-unseal-key --version-stage AWSCURRENT --region {{ aws_region }} | jq -r .SecretString
       register: vault
 
+    - set_fact:
+        orgjson: ""
+      when: deploy_action != "new_org"
+      
     - name: Export Orderer TLS Cert
       shell: |
         export AWS_PROFILE=cicd-role
         aws secretsmanager get-secret-value --secret-id {{ env }}-orderer-tls --version-stage AWSCURRENT --region {{ aws_region }} | jq -r .SecretString
       register: orgjson
       when: deploy_action == "new_org"
-
+    
     - name: Export ORG_MSP
       shell: |
         export AWS_PROFILE=cicd-role
