--- a/awx-automation/fabric-network.yml
+++ b/awx-automation/fabric-network.yml
@@ -1,6 +1,9 @@
 - hosts: ansible_provisioners
   gather_facts: yes
   no_log: "{{ no_ansible_log | default(false) }}"
+  vars:
+    orgjson:
+      stdout: ""
   vars_files:
     - "./config/{{ org_name }}-config-{{ env }}.yml"
 
