--- a/awx-automation/fabric-network.yml
+++ b/awx-automation/fabric-network.yml
@@ -38,6 +38,9 @@
       register: orgjson
       when: deploy_action == "add_new_org"
 
+    - set_fact:
+        org_json: '{{ lookup("env", "orgjson.stdout") or default("demo") }}'
+
     - include_role:
         name: "baf/network"
       vars:
@@ -53,7 +56,7 @@
         gitops_repo_user_email: "{{ gitops_repo_user_email }}"
         channel_name: "{{ channel_name }}"
         chaincode_version: "{{ chaincode_version }}"
-        org_json: "{{ orgjson.stdout | default('demo') }}"
+        org_json: "{{ org_json }}"
         registry: "{{ baf_image_repo }}"
         add_org: "{{ add_org_name }}"
         env: "{{ env }}"
