--- a/awx-automation/fabric-network.yml
+++ b/awx-automation/fabric-network.yml
@@ -38,9 +38,6 @@
       register: orgjson
       when: deploy_action == "add_new_org"
 
-    - set_fact:
-        org_json: "{{ lookup('env', 'orgjson.stdout') | default('', true) }}"
-
     - include_role:
         name: "baf/network"
       vars:
@@ -56,7 +53,7 @@
         gitops_repo_user_email: "{{ gitops_repo_user_email }}"
         channel_name: "{{ channel_name }}"
         chaincode_version: "{{ chaincode_version }}"
-        org_json: "{{ org_json }}"
+        org_json: "{{ orgjson.stdout | default('', true) }}"
         registry: "{{ baf_image_repo }}"
         add_org: "{{ add_org_name }}"
         env: "{{ env }}"
